keep Reforge filter fields outside server slots